--- a/public/clientchat/index-clientchat.html
+++ b/public/clientchat/index-clientchat.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>
-        Hong Kong Insurance Company | FWD Hong Kong
+        Hong Kong Insurance Company | Sun Life Insurance
     </title>
   
-  <meta name="description" content="Ask our chatbot about any policy information provided by FWD.">
-  <meta name="keywords" content="policy, claims, fwd, insurance,fwd insurance">
+  <meta name="description" content="Ask our chatbot about any policy information provided by Sun Life Insurance.">
+  <meta name="keywords" content="policy, claims, Sun Life Insurance">
   <meta name="viewport" content="width=device-width, initial-scale=1">
  
   <!--[if lte IE 9]>
@@ -17,7 +17,7 @@
   <![endif]-->
 
   <!-- STYLES -->
-  <link rel="icon" href="clientchat/assets/img/favicon.ico" type="image/x-icon">
+  <!-- <link rel="icon" href="clientchat/assets/img/favicon.ico" type="image/x-icon"> -->
   <link rel="stylesheet" href="clientchat/assets/css/normalize.css">
   <link rel="stylesheet" href="clientchat/assets/css/vendor/bootstrap.min.css">
   <link rel="stylesheet" href="clientchat/assets/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
@@ -46,12 +46,12 @@
     <script src="clientchat/mainassets/js/chart-master/Chart.js"></script>
 
 
-    <meta property="og:url" content="https://www.fwd.com.hk/en/">
-    <meta property="og:title" content="Hong Kong Insurance Company | FWD Hong Kong
+    <meta property="og:url" content="">
+    <meta property="og:title" content="Hong Kong Insurance Company | Sun Life Insurance
         ">
-    <meta property="og:description" content="FWD Hong Kong is an insurance company offering professional products and services relating to life insurance, general insurance, pension and financial planning.">
+    <meta property="og:description" content="Sun Life Insurance is an insurance company offering professional products and services relating to life insurance, general insurance, pension and financial planning.">
 
-    <meta property="og:image" content="https://www.fwd.com.hk/~/media/Images/FWDHK/homepage-banner/Passion_Team.jpg">
+    <meta property="og:image" content="">
 
 
     <!--[if lt IE 9]>
@@ -135,7 +135,7 @@
         <nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
             <div class="navbar-header text-center">
                 <a href="#" class="gtm-nav navbar-brand visible-xs">
-                    <img src="assets/img/mobile_logo1.png" alt="FWD Hong Kong" width="46" height="16">
+                    <img src="assets/img/mobile_logo1.png" alt="Sun Life Insurance" width="46" height="16">
                 </a>
             </div>
             <div class="mobile-menu-overlay"></div>
@@ -192,7 +192,7 @@
                             <div class="row">
                                 <!-- Collect the nav links, forms, and other content for toggling -->
                                 <a class="gtm-nav navbar-brand hidden-xs" rel="home" href="main.html" title="">
-                                    <img src="assets/img/fwd-logo.png" alt="FWD Hong Kong" width="682" height="214">
+                                    <img src="assets/img/fwd-logo.png" alt="Sun Life Insurance" width="682" height="214">
                                 </a>
                                 <ul class="nav navbar-nav navbar-right">
                                     <li><a href="#" class="gtm-nav">My Profile</a></li>
@@ -733,15 +733,15 @@
                                   </div>
                                   <div class="col-md-3 col-xs-3 text-center">
                                     <span class="text-uppercase">Household</span><br>
-                                    <a href="https://www.fwd.com.hk/en/protect/household-insurance/"><img src="assets/img/Home-01.png" alt="Household" width="90" height="90"></a>
+                                    <a href="#"><img src="assets/img/Home-01.png" alt="Household" width="90" height="90"></a>
                                   </div>
                                   <div class="col-md-3 col-xs-3 text-center">
                                     <span class="text-uppercase">Travel</span><br>
-                                    <a href="https://i.fwd.com.hk/en/travel-insurance"><img src="assets/img/Plane-1.png" alt="Travel" width="90" height="90"></a>
+                                    <a href="#"><img src="assets/img/Plane-1.png" alt="Travel" width="90" height="90"></a>
                                   </div>
                                   <div class="col-md-3 col-xs-3 text-center">
                                     <span class="text-uppercase">Car</span><br>
-                                    <a href="https://www.fwd.com.hk/en/protect/cars-boats-insurance/"><img src="assets/img/Car.png" alt="Car" width="90" height="90"></a>
+                                    <a href="#"><img src="assets/img/Car.png" alt="Car" width="90" height="90"></a>
                                   </div>
                                 </div>
                               </div>
@@ -1139,7 +1139,7 @@
                                             <td><span class="text-success">In-force</span></td>
                                         </tr>
                                     </tbody></table>
-                                    <a class="btn btn-theme btn-block" href="https://www.fwd.com.hk/~/media/Files/FWDHK/pdf/support-claims/forms/life/policy-services-request-form.pdf" target="_blank">Download Benefit Document</a>
+                                    <a class="btn btn-theme btn-block" href="#" target="_blank">Download Benefit Document</a>
                                 </div>
                             </div>
                         </div>
@@ -2563,7 +2563,7 @@
                                 <div class="col-md-12">
                                     <form>
                                       <div class="form-group">
-                                          <label for="welfare">Remark: If the policy under which this claim is made is issued by FWD General Insurance Company Limited, please note that the below payment instruction will supersede the previously designated payment instruction and all future claims will be settled by this payment instruction.</label>
+                                          <label for="welfare">Remark: If the policy under which this claim is made is issued by Sun Life Insurance Limited, please note that the below payment instruction will supersede the previously designated payment instruction and all future claims will be settled by this payment instruction.</label>
                                           <select class="form-control" id="welfare">
                                           <option>Please select</option>
                                           <option>By Cheque made payable to Policy Owner/Policyholder</option>
@@ -2858,7 +2858,7 @@
     <!---- footer---->
     <footer>
         <span id="top-link-block" class="affix-top" >
-        <a href="https://www.fwd.com.hk/en/#top" class="text-center btn btn-default" onclick="$(&#39;html,body&#39;).animate({scrollTop:0},&#39;slow&#39;);return false;">
+        <a href="#" class="text-center btn btn-default" onclick="$(&#39;html,body&#39;).animate({scrollTop:0},&#39;slow&#39;);return false;">
             <i class="fa fa-caret-up"></i>Top
         </a>
     </span>
@@ -2868,7 +2868,7 @@
                 <div class="row">
                     <div class="col-xs-12 col-sm-3 col-md-3 hotline">
                         <h3>
-                        <a class="gtm-footer" href="https://www.fwd.com.hk/en/contact-us">Contact Us <i class="fa fa-caret-right"></i></a>
+                        <a class="gtm-footer" href="#">Contact Us <i class="fa fa-caret-right"></i></a>
                         </h3>
                         <small>24-hour Service Hotline</small>
                         <big><a class="gtm-footer primary-color" href="tel:31233123">3123 3123</a></big>
@@ -2893,7 +2893,7 @@
                                 <a href="#" class="gtm-footer">Press</a>
                             </div>
                             <div class="col-md-5 col-sm-5 col-xs-6">
-                                <a href="#" class="gtm-footer">About FWD</a>
+                                <a href="#" class="gtm-footer">About Sun Life Insurance</a>
                             </div>
                             <div class="col-md-4 col-sm-4 col-xs-6">
                                 <a href="#" class="gtm-footer">Connect with Us</a>
@@ -2907,10 +2907,10 @@
                     <div class="col-xs-12 col-sm-12 col-md-3">
                         <ul class="nav social-nav">
                             <li class="pull-right">
-                                <a href="https://www.youtube.com/FWDHK" class="gtm-footer" target="_blank"><i class="fa fa-youtube-play"></i></a>
+                                <a href="#" class="gtm-footer" target="_blank"><i class="fa fa-youtube-play"></i></a>
                             </li>
                             <li class="pull-right">
-                                <a href="https://www.facebook.com/FWD.HK.MO/" class="gtm-footer" target="_blank"><i class="fa fa-facebook-square"></i></a>
+                                <a href="#" class="gtm-footer" target="_blank"><i class="fa fa-facebook-square"></i></a>
                             </li>
                             <li class="pull-right">
                                 <a href="javascript:;" class="gtm-footer sp-link" id="facebook"><i></i></a>
@@ -2930,50 +2930,49 @@
                                 <a href="#" class="gtm-footer">Sitemap&nbsp;&nbsp;|&nbsp;&nbsp;</a>
                             </li>
                             <li>
-                                <a href="https://www.fwd.com.hk/en/online-security" class="gtm-footer">Online Security&nbsp;&nbsp;|&nbsp;&nbsp;</a>
+                                <a href="#" class="gtm-footer">Online Security&nbsp;&nbsp;|&nbsp;&nbsp;</a>
                             </li>
                             <li>
-                                <a href="https://www.fwd.com.hk/en/disclaimer" class="gtm-footer">Disclaimer&nbsp;&nbsp;|&nbsp;&nbsp;</a>
+                                <a href="#" class="gtm-footer">Disclaimer&nbsp;&nbsp;|&nbsp;&nbsp;</a>
                             </li>
                             <li>
-                                <a href="https://www.fwd.com.hk/en/personal-data-protection-policy-and-practices" class="gtm-footer">Personal Data Protection Policy and Practices&nbsp;&nbsp;|&nbsp;&nbsp;</a>
+                                <a href="#" class="gtm-footer">Personal Data Protection Policy and Practices&nbsp;&nbsp;|&nbsp;&nbsp;</a>
                             </li>
                             <li>
-                                <a href="https://www.fwd.com.hk/en/important-notice" class="gtm-footer">Important Notice</a>
+                                <a href="#" class="gtm-footer">Important Notice</a>
                             </li>
 
                         </ul>
                     </div>
                     <div class="col-xs-12 col-md-6">
                         <div>
-                            <label class="control-label">Visit your local FWD site</label>
                             <div class="fancy-select"><select class="form-control fancy-select-box fancified" onchange="window.open(this.options[this.selectedIndex].value, &#39;_blank&#39;)" style="width: 1px; height: 1px; display: block; position: absolute; top: 0px; left: 0px; opacity: 0;">
-                            <option value="http://www.fwd.com.hk">FWD Hong Kong</option>
-                            <option value="http://www.fwd.com.mo">FWD Macau</option>
-                            <option value="http://www.fwd.cn">FWD China Representative Office</option>
-                            <option value="http://www.fwd.co.th">FWD Thailand</option>
-                            <option value="http://www.fwd.com.ph">FWD Philippines</option>
-                            <option value="http://www.fwd.co.id">FWD Indonesia</option>
-                            <option value="http://www.fwd.com.sg">FWD Singapore</option>
-                            <option value="http://www.fwd.com.vn">FWD Vietnam</option>
+                            <option value="#">Sun Life Insurance Hong Kong</option>
+                            <option value="#">Sun Life Insurance Macau</option>
+                            <option value="#">Sun Life Insurance China Representative Office</option>
+                            <option value="#">Sun Life Insurance Thailand</option>
+                            <option value="#">Sun Life Insurance Philippines</option>
+                            <option value="#">Sun Life Insurance Indonesia</option>
+                            <option value="#">Sun Life Insurance Singapore</option>
+                            <option value="#">Sun Life Insurance Vietnam</option>
 
                         </select>
-                                <div class="trigger">FWD Hong Kong</div>
+                                <div class="trigger">Sun Life Insurance</div>
                                 <ul class="options">
-                                    <li data-raw-value="http://www.fwd.com.hk" class="selected">FWD Hong Kong</li>
-                                    <li data-raw-value="http://www.fwd.com.mo">FWD Macau</li>
-                                    <li data-raw-value="http://www.fwd.cn">FWD China Representative Office</li>
-                                    <li data-raw-value="http://www.fwd.co.th">FWD Thailand</li>
-                                    <li data-raw-value="http://www.fwd.com.ph">FWD Philippines</li>
-                                    <li data-raw-value="http://www.fwd.co.id">FWD Indonesia</li>
-                                    <li data-raw-value="http://www.fwd.com.sg">FWD Singapore</li>
-                                    <li data-raw-value="http://www.fwd.com.vn">FWD Vietnam</li>
+                                    <li data-raw-value="#" class="selected">Sun Life Insurance Hong Kong</li>
+                                    <li data-raw-value="#">Sun Life Insurance Macau</li>
+                                    <li data-raw-value="#">Sun Life Insurance China Representative Office</li>
+                                    <li data-raw-value="#">Sun Life Insurance Thailand</li>
+                                    <li data-raw-value="#">Sun Life Insurance Philippines</li>
+                                    <li data-raw-value="#">Sun Life Insurance Indonesia</li>
+                                    <li data-raw-value="#">Sun Life Insurance Singapore</li>
+                                    <li data-raw-value="#">Sun Life Insurance Vietnam</li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                     <div class="col-xs-12 col-md-5">
-                        © Copyright 2016 FWD Hong Kong. All rights reserved.
+                        © Copyright 2017 Sun Life Insurance. All rights reserved.
                     </div>
                 </div>
             </div>
@@ -3219,7 +3218,7 @@
                                         <div class="row chat-footer-content">
                                           <div class="col-xs-10">
                                             <div class="chat-footer-message-entry">
-                                              <textarea rows="1" placeholder="Type your message" aria-label="Type your message to the FWD Insurance chatbot."></textarea>
+                                              <textarea rows="1" placeholder="Type your message" aria-label="Type your message to the Sun Life Insurance chatbot."></textarea>
                                             </div>
                                           </div>
 
