--- a/public/clientchat/index-clientchat.html
+++ b/public/clientchat/index-clientchat.html
@@ -17,7 +17,7 @@
   <![endif]-->
 
   <!-- STYLES -->
-  <!-- <link rel="icon" href="clientchat/assets/img/favicon.ico" type="image/x-icon"> -->
+  <link rel="icon" href="clientchat/assets/img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="clientchat/assets/css/normalize.css">
   <link rel="stylesheet" href="clientchat/assets/css/vendor/bootstrap.min.css">
   <link rel="stylesheet" href="clientchat/assets/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
