test with one signal

--- a/public/clientchat/index-clientchat.html
+++ b/public/clientchat/index-clientchat.html
@@ -24,6 +24,16 @@
   <link rel="stylesheet" href="clientchat/assets/css/main.css">
   <link rel="stylesheet" href="clientchat/assets/css/custom.css">
   
+  <script>
+    var OneSignal = window.OneSignal || [];
+    OneSignal.push(["init", {
+      appId: "35711c56-ae53-4832-b003-7889f21ca06a",
+      autoRegister: false,
+      notifyButton: {
+        enable: true /* Set to false to hide */
+      }
+    }]);
+  </script>
   <!-- MODERNIZR -->
   <script src="clientchat/assets/js/vendor/modernizr-2.8.3.min.js"></script>
 
