test with one signal

--- a/public/clientchat/index-clientchat.html
+++ b/public/clientchat/index-clientchat.html
@@ -24,6 +24,8 @@
   <link rel="stylesheet" href="clientchat/assets/css/main.css">
   <link rel="stylesheet" href="clientchat/assets/css/custom.css">
   
+  <link rel="manifest" href="/manifest.json">
+  <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async></script>
   <script>
     var OneSignal = window.OneSignal || [];
     OneSignal.push(["init", {
